Further experiments with initializing script

--- a/src/main/resources/org/jenkinsci/plugins/rustlang/Messages.properties
+++ b/src/main/resources/org/jenkinsci/plugins/rustlang/Messages.properties
@@ -6,3 +6,4 @@ CouldNotInstallRust=Could not install Rust because {0}
 NoInstallerForOs=there is no {0} installer for {1} ({2})...
 UnsupportedOs={0} is not a supported OS
 UnsupportedCpuArch={0} is not a supported CPU type
+UsingInstallScript=Utilizing Install Script
